Fix line spacing issue for text elements

--- a/astudio.css
+++ b/astudio.css
@@ -538,12 +538,12 @@ input#file:focus {
 .text {
     display: block;
     margin-top: 1rem;
-    line-height: 1rem;
+    line-height: 1.5rem;
     vertical-align: middle;
 }
 
 .material-icons.bulletPoint {
-    line-height: 1rem;
+    line-height: 1.5rem;
     vertical-align: middle;
     font-size: 0.7rem;
     margin-right: 0.3rem;
